<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/LinearLayout1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

        <Button
        	android:id="@+id/btnProcessamento2"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/label_button_processamento2" />

        <Button
        	android:id="@+id/btnProcessamento1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/label_button_processamento1" />

        <Button
        	android:id="@+id/btnLimpar"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/label_button_limpar" />

    </LinearLayout>

    <ListView
    	android:id="@+id/listView1"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
