<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="${relativePackage}.${activityClass}" 
	android:orientation="vertical">

    <TextView
    	android:id="@+id/textView1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/rate_service"
    	android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
    	android:id="@+id/ratingBarService"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center" 
    	android:numStars="5"
    	android:rating="3"
    	android:stepSize="1.0"
    	android:isIndicator="false"/>

    <TextView
    	android:id="@+id/textView2"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/rate_price"
    	android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
    	android:id="@+id/ratingBarPrice"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center" 
    	android:numStars="5"
    	android:rating="3"
    	android:stepSize="1.0"
    	android:isIndicator="false"/>

    <Button
    	android:id="@+id/buttonDone"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/done" />

</LinearLayout>
