<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MapaSimples" >

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="1" >

		<TableRow
			android:id="@+id/tableRow1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|end"
				android:text="@string/textViewLatitude"
				android:textSize="12sp" >
			</TextView>

			<EditText
				android:id="@+id/edtLatitude"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:inputType="numberDecimal" >

				<requestFocus />
			</EditText>
		</TableRow>

		<TableRow
			android:id="@+id/tableRow2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|end"
				android:text="@string/textViewLongitude"
				android:textSize="12sp" />

			<EditText
				android:id="@+id/edtLongitude"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:inputType="numberDecimal" />
		</TableRow>
	</TableLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<Button
			android:id="@+id/btnOK"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btnOK" />
	</LinearLayout>

	<fragment
		android:id="@+id/map"
		android:name="com.google.android.gms.maps.MapFragment"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

</LinearLayout>